<resources>
    <string name="app_name">petrolTracker</string>
    <string name="action_settings">Settings</string>
    <string name="totalKm">Total Km</string>
    <string name="liter">Liter</string>
    <string name="amount">Amount</string>
    <string name="date">Date</string>
    <string name="title_activity_add_data">Add Bike Data</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="meterKmTxt">Meter</string>
    <string name="SAVE">Save</string>
    <string name="rate">Rate</string>
    <string name="setDate">Set Date</string>
    <string name="EDIT">Edit</string>
    <string name="UPDATE">Udate</string>
    <string name="DELETE">Delete</string>
    <string name="CANCEL">cancel</string>
    <string name="PRERATE">Rate Diff</string>
    <string name="DAYS">Days</string>
    <string name="PATROLPOINT">Point</string>
    <string name="AVG">Avg</string>
</resources>
