<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="140dp">

  <TextView
      android:id="@+id/textViewMeter"
      android:layout_width="58dp"
      android:layout_height="19dp"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:text="@string/meterKmTxt"
      android:textSize="14sp"
      android:textStyle="bold"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/txtMeter"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:text="@string/meterKmTxt"
      android:textSize="14sp"
      app:layout_constraintStart_toEndOf="@+id/textViewMeter"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/textViewDate"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="46dp"
      android:layout_marginTop="8dp"
      android:text="@string/date"
      android:textStyle="bold"
      app:layout_constraintStart_toEndOf="@+id/txtMeter"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/txtDate"
      android:layout_width="wrap_content"
      android:layout_height="23dp"
      android:layout_marginStart="28dp"
      android:layout_marginTop="8dp"
      android:layout_marginEnd="8dp"
      android:text="@string/date"
      android:textSize="14sp"
      app:layout_constraintEnd_toStartOf="@+id/btnEdit"
      app:layout_constraintHorizontal_bias="0.133"
      app:layout_constraintStart_toEndOf="@+id/textViewDate"
      app:layout_constraintTop_toTopOf="parent"
      tools:text="@tools:sample/date/mmddyy" />

  <TextView
      android:id="@+id/textViewTotalKm"
      android:layout_width="58dp"
      android:layout_height="19dp"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:text="@string/totalKm"
      android:textSize="14sp"
      android:textStyle="bold"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textViewMeter" />

  <TextView
      android:id="@+id/txtTotalKm"
      android:layout_width="56dp"
      android:layout_height="18dp"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:text="@string/totalKm"
      android:textSize="14sp"
      app:layout_constraintStart_toEndOf="@+id/textViewTotalKm"
      app:layout_constraintTop_toBottomOf="@+id/txtMeter" />

  <TextView
      android:id="@+id/textViewRate"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="48dp"
      android:layout_marginTop="8dp"
      android:layout_marginBottom="12dp"
      android:text="@string/rate"
      android:textStyle="bold"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toEndOf="@+id/txtPoint"
      app:layout_constraintTop_toBottomOf="@+id/textViewPreRate" />

  <TextView
      android:id="@+id/txtRate"
      android:layout_width="138dp"
      android:layout_height="19dp"
      android:layout_marginStart="36dp"
      android:layout_marginTop="8dp"
      android:layout_marginEnd="8dp"
      android:layout_marginBottom="12dp"
      android:text="@string/rate"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toEndOf="@+id/textViewRate"
      app:layout_constraintTop_toBottomOf="@+id/txtRateDiff"
      app:layout_constraintVertical_bias="1.0" />

  <TextView
      android:id="@+id/textViewAmt"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:text="@string/amount"
      android:textStyle="bold"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textViewTotalKm" />

  <TextView
      android:id="@+id/txtAmount"
      android:layout_width="52dp"
      android:layout_height="17dp"
      android:layout_marginStart="16dp"
      android:layout_marginTop="8dp"
      android:text="@string/amount"
      android:textSize="14sp"
      app:layout_constraintStart_toEndOf="@+id/textViewAmt"
      app:layout_constraintTop_toBottomOf="@+id/txtTotalKm" />

  <TextView
      android:id="@+id/textViewLiter"
      android:layout_width="35dp"
      android:layout_height="17dp"
      android:layout_marginStart="32dp"
      android:layout_marginTop="8dp"
      android:text="@string/liter"
      android:textStyle="bold"
      app:layout_constraintStart_toEndOf="@+id/txtAmount"
      app:layout_constraintTop_toBottomOf="@+id/textViewAvg" />

  <TextView
      android:id="@+id/txtLiter"
      android:layout_width="54dp"
      android:layout_height="18dp"
      android:layout_marginStart="27dp"
      android:layout_marginTop="8dp"
      android:layout_marginEnd="84dp"
      android:text="@string/liter"
      android:textSize="14sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.172"
      app:layout_constraintStart_toEndOf="@+id/textViewLiter"
      app:layout_constraintTop_toBottomOf="@+id/txtAvg" />

  <TextView
      android:id="@+id/textViewPreRate"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="31dp"
      android:layout_marginTop="8dp"
      android:text="@string/PRERATE"
      android:textStyle="bold"
      app:layout_constraintStart_toEndOf="@+id/txtDays"
      app:layout_constraintTop_toBottomOf="@+id/textViewLiter" />

  <TextView
      android:id="@+id/txtRateDiff"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:layout_marginEnd="8dp"
      android:text="@string/PRERATE"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toEndOf="@+id/textViewPreRate"
      app:layout_constraintTop_toBottomOf="@+id/txtLiter" />

  <TextView
      android:id="@+id/textViewPoint"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:layout_marginBottom="12dp"
      android:text="@string/PATROLPOINT"
      android:textStyle="bold"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textViewDays" />

  <TextView
      android:id="@+id/txtPoint"
      android:layout_width="37dp"
      android:layout_height="17dp"
      android:layout_marginStart="32dp"
      android:layout_marginTop="8dp"
      android:layout_marginBottom="12dp"
      android:text="@string/PATROLPOINT"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toEndOf="@+id/textViewPoint"
      app:layout_constraintTop_toBottomOf="@+id/txtDays" />

  <TextView
      android:id="@+id/textViewDays"
      android:layout_width="35dp"
      android:layout_height="17dp"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:text="@string/DAYS"
      android:textStyle="bold"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textViewAmt" />

  <TextView
      android:id="@+id/txtDays"
      android:layout_width="53dp"
      android:layout_height="18dp"
      android:layout_marginStart="32dp"
      android:layout_marginTop="8dp"
      android:text="@string/DAYS"
      android:textSize="14sp"
      app:layout_constraintStart_toEndOf="@+id/textViewDays"
      app:layout_constraintTop_toBottomOf="@+id/txtAmount" />

  <TextView
      android:id="@+id/textViewAvg"
      android:layout_width="35dp"
      android:layout_height="19dp"
      android:layout_marginStart="29dp"
      android:layout_marginTop="8dp"
      android:text="@string/AVG"
      android:textStyle="bold"
      app:layout_constraintStart_toEndOf="@+id/txtTotalKm"
      app:layout_constraintTop_toBottomOf="@+id/textViewDate" />

  <TextView
      android:id="@+id/txtAvg"
      android:layout_width="50dp"
      android:layout_height="17dp"
      android:layout_marginStart="27dp"
      android:layout_marginTop="8dp"
      android:layout_marginEnd="8dp"
      android:text="@string/AVG"
      android:textSize="14sp"
      app:layout_constraintEnd_toStartOf="@+id/btnEdit"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toEndOf="@+id/textViewAvg"
      app:layout_constraintTop_toBottomOf="@+id/txtDate" />

  <ImageButton
      android:id="@+id/btnEdit"
      android:layout_width="26dp"
      android:layout_height="31dp"
      android:layout_marginTop="8dp"
      android:layout_marginEnd="16dp"
      android:layout_marginBottom="8dp"
      android:background="#070707"
      android:backgroundTint="#007A1919"
      android:contentDescription="@string/EDIT"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.0"
      app:srcCompat="@android:drawable/ic_menu_edit" />

</androidx.constraintlayout.widget.ConstraintLayout>
